--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,39 @@
+ablog==0.11.4.post1
+accessible-pygments==0.0.4
 alabaster==0.7.13
 Babel==2.12.1
 beautifulsoup4==4.12.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-docutils==0.18.1
-furo==2023.5.20
+certifi==2023.7.22
+charset-normalizer==3.2.0
+docutils==0.19
+feedgen==0.9.0
 idna==3.4
 imagesize==1.4.1
+invoke==2.2.0
 Jinja2==3.1.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-mdit-py-plugins==0.3.5
+lxml==4.9.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdit-py-plugins==0.4.0
 mdurl==0.1.2
-myst-parser==1.0.0
+myst-parser==2.0.0
 packaging==23.1
+pydata-sphinx-theme==0.13.3
 Pygments==2.15.1
-pyparsing==3.0.9
-pytz==2023.3
-PyYAML==6.0
+python-dateutil==2.8.2
+PyYAML==6.0.1
 requests==2.31.0
+six==1.16.0
 snowballstemmer==2.2.0
 soupsieve==2.4.1
 Sphinx==6.2.1
-sphinx-basic-ng==1.0.0b1
+sphinx-book-theme==1.0.1
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-typing_extensions==4.5.0
-urllib3==1.26.14
+typing_extensions==4.7.1
+urllib3==2.0.4
+watchdog==3.0.0
