--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.4
 imagesize==1.4.1
 invoke==2.2.0
 Jinja2==3.1.2
+linkify-it-py==2.0.2
 lxml==4.9.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -28,6 +29,7 @@ snowballstemmer==2.2.0
 soupsieve==2.4.1
 Sphinx==6.2.1
 sphinx-book-theme==1.0.1
+sphinx_design==0.5.0
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
@@ -35,5 +37,6 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 typing_extensions==4.7.1
+uc-micro-py==1.0.2
 urllib3==2.0.4
 watchdog==3.0.0
