--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,9 +31,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        if: ${{ github.event_name == 'push' }}
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -43,8 +46,10 @@ jobs:
         run: make -C blog html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
+        if: ${{ github.event_name == 'push' }}
         with:
           path: './blog/_build/html'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        if: ${{ github.event_name == 'push' }}
