--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Blog to Github Pages
+name: Build and Deploy Blog to Github Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -23,18 +23,11 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        if: ${{ github.event_name == 'push' }}
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -45,11 +38,30 @@ jobs:
       - name: Generate Blog
         run: make -C blog html
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v3
         with:
+          name: blog
           path: './blog/_build/html'
+
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: blog
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        if: ${{ github.event_name == 'push' }}
