--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ certifi==2023.7.22
     # via requests
 charset-normalizer==3.2.0
     # via requests
+colorama==0.4.6
+    # via sphinx
 docutils==0.19
     # via
     #   ablog
