--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ accessible-pygments==0.0.4
     # via pydata-sphinx-theme
 alabaster==0.7.13
     # via sphinx
+anyio==4.9.0
+    # via
+    #   starlette
+    #   watchfiles
 babel==2.12.1
     # via
     #   pydata-sphinx-theme
@@ -16,6 +20,10 @@ certifi==2023.7.22
     # via requests
 charset-normalizer==3.2.0
     # via requests
+click==8.1.8
+    # via uvicorn
+colorama==0.4.6
+    # via sphinx-autobuild
 docutils==0.19
     # via
     #   ablog
@@ -24,8 +32,12 @@ docutils==0.19
     #   sphinx
 feedgen==0.9.0
     # via ablog
+h11==0.14.0
+    # via uvicorn
 idna==3.4
-    # via requests
+    # via
+    #   anyio
+    #   requests
 imagesize==1.4.1
     # via sphinx
 invoke==2.2.0
@@ -72,6 +84,8 @@ requests==2.31.0
     # via sphinx
 six==1.16.0
     # via python-dateutil
+sniffio==1.3.1
+    # via anyio
 snowballstemmer==2.2.0
     # via sphinx
 soupsieve==2.4.1
@@ -82,8 +96,11 @@ sphinx==6.2.1
     #   ablog
     #   myst-parser
     #   pydata-sphinx-theme
+    #   sphinx-autobuild
     #   sphinx-book-theme
     #   sphinx-design
+sphinx-autobuild==2024.10.3
+    # via -r requirements.in
 sphinx-book-theme==1.0.1
     # via -r requirements.in
 sphinx-design==0.6.0
@@ -100,11 +117,21 @@ sphinxcontrib-qthelp==1.0.3
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
+starlette==0.46.1
+    # via sphinx-autobuild
 typing-extensions==4.7.1
-    # via pydata-sphinx-theme
+    # via
+    #   anyio
+    #   pydata-sphinx-theme
 uc-micro-py==1.0.2
     # via linkify-it-py
 urllib3==2.0.4
     # via requests
+uvicorn==0.34.0
+    # via sphinx-autobuild
 watchdog==3.0.0
     # via ablog
+watchfiles==1.0.4
+    # via sphinx-autobuild
+websockets==15.0.1
+    # via sphinx-autobuild
